--- a/ATOM_Home_Assignment_2.ipynb
+++ b/ATOM_Home_Assignment_2.ipynb
@@ -74,6 +74,18 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "y19KvBO1mN6h"
+      },
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "I2nTgPRQ1MjI",
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -83,7 +95,7 @@
       "source": [
         "!ls #để liệt kể các files đang có trong cùng \"folder\" với file notebook"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -108,7 +120,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "j3Fv0NUdXyd1"
+        "id": "j3Fv0NUdXyd1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "0fab32f0-58a2-4414-867a-6bab7f37ecea"
       },
       "source": [
         "import json\n",
@@ -117,18 +133,38 @@
         "    print(json_data)"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "{'SENDER_EMAIL': 'levy6543@gmail.com', 'PWD_EMAIL': 'fepbnwemltsqwszu', 'WEATHER_API_KEY': '28218219163d32ca2f481cfed5e0f025'}\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "oxJE2SMps4mP"
+        "id": "oxJE2SMps4mP",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "34843f44-10bc-4364-d477-3c19bacbc73d"
       },
       "source": [
         "print(json_data['SENDER_EMAIL'])"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "levy6543@gmail.com\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -169,12 +205,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 232
-        },
         "id": "4vlqLayL2IDd",
-        "outputId": "15c0132c-b470-4e07-8257-414cc596d1a4"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "89aa0e16-d64f-4213-d6c0-4f26550690a6"
       },
       "source": [
         "import os\n",
@@ -183,29 +218,25 @@
         "os.environ['WEATHER_API_KEY'] = json_data['WEATHER_API_KEY'] ## INPUT: OpenWeather API Key\n",
         "print('DONE! Get Env. Variable')"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-6-22d0b63b97da>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0menviron\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'SENDER_EMAIL'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mjson_data\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'SENDER_EMAIL'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;31m## INPUT: Your Email\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0menviron\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'PWD_EMAIL'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mjson_data\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'PWD_EMAIL'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;31m## INPUT: Your App Password\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0menviron\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'WEATHER_API_KEY'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mjson_data\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'WEATHER_API_KEY'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;31m## INPUT: OpenWeather API Key\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'DONE! Get Env. Variable'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'json_data' is not defined"
-          ]
+          "output_type": "stream",
+          "text": [
+            "DONE! Get Env. Variable\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
+        "id": "pnWQlWHMZja7",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "pnWQlWHMZja7",
-        "outputId": "af9cb1b9-1d07-4c67-862e-12aa4624ba61"
+        "outputId": "305bc5ec-5292-4e00-8278-4923acb1f0b7"
       },
       "source": [
         "print(os.environ['SENDER_EMAIL'])"
@@ -215,7 +246,7 @@
         {
           "output_type": "stream",
           "text": [
-            "abc@gmail.com\n"
+            "levy6543@gmail.com\n"
           ],
           "name": "stdout"
         }
@@ -292,7 +323,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "bad054b2-da52-4132-ea4c-d93a79eaa6d5"
+        "outputId": "14e07c01-1735-4a72-9191-aa60a4da66de"
       },
       "source": [
         "subject = \"Test Email\" #INPUT1: Subject of the Email\n",
@@ -351,7 +382,7 @@
         {
           "output_type": "stream",
           "text": [
-            "Your email: abc@gmail.com\n",
+            "Your email: levy6543@gmail.com\n",
             "DONE! Mail Sent\n"
           ],
           "name": "stdout"
@@ -374,14 +405,72 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "2YV6peDOmNkA"
+        "id": "2YV6peDOmNkA",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "d45c972a-2288-4b64-aea9-aaf219a36dff"
       },
       "source": [
         "def send_email(receiver_email, subject, part1, part2, part3):\n",
-        "  # YOUR CODE"
+        "  # YOUR CODE\n",
+        "  subject = \"Test Email\" #INPUT1: Subject of the Email\n",
+        "  receiver_email = input(\"Your email: \") #INPUT2: email address to receive the email\n",
+        "  sender_email = os.environ['SENDER_EMAIL']\n",
+        "  password = os.environ['PWD_EMAIL'] \n",
+        "\n",
+        "# (1) Create the email head (sender, receiver, and subject)\n",
+        "email = MIMEMultipart()\n",
+        "email[\"From\"] = sender_email\n",
+        "email[\"To\"] = receiver_email \n",
+        "email[\"Subject\"] = subject\n",
+        "\n",
+        "# (2) Create Body part\n",
+        "# We use html, you can convert word to html: https://wordtohtml.net/\n",
+        "html1 = \"\"\"\n",
+        "  <body>\n",
+        "      <p>Hello,</p>\n",
+        "      <p>Here is to test *** Python Function</p>\n",
+        "      <p>*** can find Home Assignment 2 <a href=\"https://anhdang.gitbook.io/datacracy/atom/2-data-tools-1/home-assignment2\">here</a></p>\n",
+        "  </body>\n",
+        "    \"\"\"\n",
+        "html2 = \"\"\"\n",
+        "<html>\n",
+        "Email sent at <b>{}</b><br>\n",
+        "</html>\n",
+        "\"\"\".format(dt.datetime.now().isoformat())\n",
+        "\n",
+        "text3 = '--- End ----'\n",
+        "\n",
+        "# Combine parts\n",
+        "part1 = MIMEText(html1, 'html')\n",
+        "part2 = MIMEText(html2, 'html')\n",
+        "part3 = MIMEText(text3, 'plain')\n",
+        "\n",
+        "email.attach(part1)\n",
+        "email.attach(part2)\n",
+        "email.attach(part3)\n",
+        "\n",
+        "# (3) Create SMTP session for sending the mail\n",
+        "session = smtplib.SMTP('smtp.gmail.com', 587) #use gmail with port\n",
+        "session.starttls() #enable security\n",
+        "session.login(sender_email, password) #login with mail_id and password\n",
+        "text = email.as_string()\n",
+        "session.sendmail(sender_email, receiver_email, text)\n",
+        "session.quit()\n",
+        "\n",
+        "print('DONE! Mail Sent'.format(sender_email, receiver_email))"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "DONE! Mail Sent\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -430,7 +519,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3ZzdPfFbiCZa",
-        "outputId": "e545d025-5a9c-444a-8255-c489e81d6bf6"
+        "outputId": "f1225613-30fa-4b42-8907-4c18253481c2"
       },
       "source": [
         "# base URL\n",
@@ -488,7 +577,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "aOTClQTCn7wh",
-        "outputId": "c8a74544-6073-4d72-9c4c-9254fd99d3c2"
+        "outputId": "2d8cc0f3-c527-4376-e08e-97d2cbbfdf20"
       },
       "source": [
         "!ls"
@@ -498,7 +587,7 @@
         {
           "output_type": "stream",
           "text": [
-            "sample_data  weather.txt\n"
+            "env_variable.json  sample_data\tweather.txt\n"
           ],
           "name": "stdout"
         }
@@ -511,7 +600,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "I_4mwiKRpVzJ",
-        "outputId": "a354c204-8110-4186-ae37-9cbd72210e9f"
+        "outputId": "30917e43-22e4-4aa2-9e9f-8f5c13951309"
       },
       "source": [
         "print(open(\"weather.txt\", \"r\").read())"
@@ -522,9 +611,9 @@
           "output_type": "stream",
           "text": [
             "------------London------------\n",
-            "Temperature: 283.69\n",
-            "Humidity: 87\n",
-            "Pressure: 997\n",
+            "Temperature: 285.39\n",
+            "Humidity: 62\n",
+            "Pressure: 1009\n",
             "Weather Report: overcast clouds\n",
             "\n"
           ],
@@ -539,7 +628,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "kqwsvfxolao7",
-        "outputId": "0a860e33-6993-4b70-e513-93d63ec075a0"
+        "outputId": "cd33a415-f046-4312-d573-ea8ddce84af0"
       },
       "source": [
         "# Khám phá file JSON\n",
@@ -552,22 +641,22 @@
           "data": {
             "text/plain": [
               "{'base': 'stations',\n",
-              " 'clouds': {'all': 100},\n",
+              " 'clouds': {'all': 90},\n",
               " 'cod': 200,\n",
               " 'coord': {'lat': 51.5085, 'lon': -0.1257},\n",
-              " 'dt': 1620621496,\n",
+              " 'dt': 1621014905,\n",
               " 'id': 2643743,\n",
-              " 'main': {'feels_like': 283.08,\n",
-              "  'humidity': 87,\n",
-              "  'pressure': 997,\n",
-              "  'temp': 283.7,\n",
-              "  'temp_max': 284.26,\n",
-              "  'temp_min': 283.15},\n",
+              " 'main': {'feels_like': 284.29,\n",
+              "  'humidity': 62,\n",
+              "  'pressure': 1009,\n",
+              "  'temp': 285.39,\n",
+              "  'temp_max': 285.93,\n",
+              "  'temp_min': 284.82},\n",
               " 'name': 'London',\n",
               " 'sys': {'country': 'GB',\n",
               "  'id': 1414,\n",
-              "  'sunrise': 1620620177,\n",
-              "  'sunset': 1620675455,\n",
+              "  'sunrise': 1620965402,\n",
+              "  'sunset': 1621021429,\n",
               "  'type': 1},\n",
               " 'timezone': 3600,\n",
               " 'visibility': 10000,\n",
@@ -575,39 +664,7 @@
               "   'icon': '04d',\n",
               "   'id': 804,\n",
               "   'main': 'Clouds'}],\n",
-              " 'wind': {'deg': 220, 'speed': 3.6}}"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 40
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        },
-        "id": "9m9ccXB6nOyN",
-        "outputId": "2bd4169e-ea31-4b5e-b4a4-dfe02aaddd47"
-      },
-      "source": [
-        "data['name']"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            },
-            "text/plain": [
-              "'London'"
+              " 'wind': {'deg': 0, 'speed': 1.03}}"
             ]
           },
           "metadata": {
@@ -620,30 +677,24 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "-hfJui94nQ8i",
-        "outputId": "c5e67e49-ad39-4310-f170-a5ee32fe5b3a"
+        "id": "9m9ccXB6nOyN"
+      },
+      "source": [
+        "data['name']"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-hfJui94nQ8i"
       },
       "source": [
         "data['coord']['lat']"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "51.5085"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 42
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
