--- a/Lê_Vy_home_assignment_3.ipynb
+++ b/Lê_Vy_home_assignment_3.ipynb
@@ -71,7 +71,7 @@
         "from oauth2client.service_account import ServiceAccountCredentials #-> Để nhập Google Spreadsheet Credentials\n",
         "import os"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -95,12 +95,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "YoSEHfdTwYRj",
-        "outputId": "3f631f67-bb08-4a3d-d2d8-177841e9f7dd"
+        "outputId": "3bea3724-3b7d-44a8-a2a2-33853c7889c9"
       },
       "source": [
         "!ls"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -121,7 +121,7 @@
         "    json_data = json.load(j)\n",
         "    # print(json_data)"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -133,7 +133,7 @@
         "## Load SLACK_BEARER_TOKEN\n",
         "os.environ['SLACK_BEARER_TOKEN'] = json_data['SLACK_BEARER_TOKEN'] "
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -149,7 +149,7 @@
         "response_json = requests.post(endpoint, headers=headers).json() \n",
         "user_dat = response_json['members']"
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -427,7 +427,7 @@
       "source": [
         "!ls"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -456,7 +456,7 @@
         "gc = gspread.authorize(credentials)\n",
         "print(\"DONE!\")"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -500,17 +500,8 @@
         "\n",
         "# DONE: Bây giờ bạn có thể mở spreadsheet và kiểm tra nội dung đã update chứ"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "ySXS7o7iPYDM"
-      },
-      "source": [
-        "![slack_user_gsheet](../img/slack_user_gsheet.png)"
-      ]
     },
     {
       "cell_type": "markdown",
@@ -551,7 +542,7 @@
         "response = requests.post(endpoint, headers=headers).json() \n",
         "channel_ls = response['channels']"
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -561,12 +552,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "47dUJAPi0Jg5",
-        "outputId": "2762f1e8-ff65-4994-c3e5-1ab0f5dc9205"
+        "outputId": "0673c3a7-43ae-4f6b-bc09-c54e012cef36"
       },
       "source": [
         "channel_ls[0] ## Thử extract record đầu tiên để xem schema  => name: general, id: C01B4PVGLVB"
       ],
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -581,7 +572,7 @@
               " 'is_general': True,\n",
               " 'is_group': False,\n",
               " 'is_im': False,\n",
-              " 'is_member': False,\n",
+              " 'is_member': True,\n",
               " 'is_mpim': False,\n",
               " 'is_org_shared': False,\n",
               " 'is_pending_ext_shared': False,\n",
@@ -589,7 +580,7 @@
               " 'is_shared': False,\n",
               " 'name': 'general',\n",
               " 'name_normalized': 'general',\n",
-              " 'num_members': 62,\n",
+              " 'num_members': 65,\n",
               " 'parent_conversation': None,\n",
               " 'pending_connected_team_ids': [],\n",
               " 'pending_shared': [],\n",
@@ -605,7 +596,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 183
+          "execution_count": 10
         }
       ]
     },
